duniverse/menhirLib.20200211/test/static/bad/keyword.mly
  %token<int> INT
  %start<unit> file
  %%

  file : with=INT { ignore(with) }
